# Horarios-Automaticos-Backend

./: .env.example  .gitignore  Dockerfile  Jenkinsfile  docker-compose.yml  entrypoint.sh  pyproject.toml  railway.toml  test.db
alembic/: env.py
alembic/versions/: 06a94ed61647_create_all_tables.py  430667857ba4_add_is_active_to_schedule_periods.py  6dd228d9f2c3_add_avatar_url_to_users.py  a1c2e9f3d401_add_group_name_to_department_members.py  b81b2267fdbf_add_foreign_key_constraints.py
scripts/: import_personal_mostrador.py  learn_patterns_from_xlsx.py  seed.py
src/: main.py
src/core/: config.py  database.py  deps.py  logging.py  security.py
src/models/: __init__.py  department_member.py  generation_preference.py  generation_run.py  member_generation_preference.py  schedule_assignment.py  schedule_period.py  shift_type.py  user.py
src/routes/: assignments.py  auth.py  export.py  generation.py  members.py  preferences.py  schedule_periods.py  shift_types.py
src/schemas/: assignment.py  auth.py  generation.py  member.py  pagination.py  preferences.py  schedule_period.py  shift_type.py
src/services/: assignment_service.py  export_service.py  member_service.py  preferences_service.py  schedule_period_service.py  shift_type_service.py  validation_service.py
src/services/generator/: balanced.py  base.py  conservative.py  coverage.py  engine.py
tests/: conftest.py  test_auth.py  test_generation.py  test_members.py  test_periods.py  test_shifts.py
